# ZephCore

./: .gitignore  INTEGRATOR_MANUAL.md  PROVIDER_CATALOG.md  README.md  ZephyrAccelerometer.cpp  ZephyrAccelerometer.h  build.sh  gen_provider_catalog.py
.github/workflows/: build.yml
formatter/: README.md  SoftDevice_v6_formatter.uf2  SoftDevice_v7_formatter.uf2
releasenotes/: RELEASE_NOTES_1.16.5-zephcore.md  RELEASE_NOTES_v1.16.5.md
zephcore/: ADAPTIVE_CAD.md  ARCHITECTURE.md  CMakeLists.txt  Kconfig  MESHTIMESYNC.md  Repeater_CLI_commands.md  prj.conf  west.yml
zephcore/adapters/ble/: ZephyrBLE.cpp
zephcore/adapters/board/: ZephyrBoard.cpp  ZephyrBoard.h
zephcore/adapters/datastore/: ZephyrDataStore.cpp
zephcore/adapters/radio/: LoRaRadioBase.cpp  LoRaRadioBase.h  radio_common.h
zephcore/adapters/radio/lr20xx/: lr20xx_radio_common.c
zephcore/adapters/usb/: ZephyrCompanionUSB.cpp  ZephyrCompanionUSB.h  ZephyrUSBCDC.cpp
zephcore/app/: CompanionMesh.cpp  CompanionMesh.h  ObserverMesh.cpp  ObserverMesh.h  RepeaterDataStore.cpp  RepeaterMesh.cpp  RepeaterMesh.h  RoomServerMesh.cpp  RoomServerMesh.h  main_observer.cpp
zephcore/boards/: supported_boards.md
zephcore/boards/common/: debug.conf  zephcore_common.conf
zephcore/boards/esp32/heltec_wifi_lora32_v3/: board.conf  board.overlay
zephcore/boards/esp32/heltec_wifi_lora32_v4/: board.overlay  heltec_wifi_lora32_v4_procpu.dts
zephcore/boards/esp32/heltec_wifi_lora32_v43/: board.overlay  heltec_wifi_lora32_v43_procpu.dts
zephcore/boards/example_board/: README.md
zephcore/boards/nrf52840/lilygo_timpulse_plus/: lilygo_timpulse_plus.dts
zephcore/boards/nrf52840/promicro_lr2021/: promicro_lr2021.dts
zephcore/boards/nrf52840/rak4631/: board.conf
zephcore/boards/nrf52840/thinknode_m6/: thinknode_m6.dts
zephcore/helpers/: BaseChatMesh.cpp  CommonCLI.cpp  CommonCLI.h  MeshTimeSync.cpp  MeshTimeSync.h  NodePrefs.h  RegionMap.cpp  fatal_reboot.c
zephcore/helpers/ui/: display.c  ui_common.c  ui_headless_stubs.c  ui_task.h
zephcore/helpers/ui-button/: ui_pages.c  ui_task.c
zephcore/helpers/ui-joystick/: joystick_screens.h  joystick_ui_hooks.cpp
zephcore/helpers/ui-joystick/screens/: tools.cpp
zephcore/patches/zephyr/: 0003-lora-sx126x-native.patch
zephcore/patches/zephyr-new/drivers/lora/lr11xx/: lr11xx_lora.c
zephcore/patches/zephyr-new/drivers/lora/lr20xx/: lr20xx_lora.c
zephcore/src/: Dispatcher.cpp  main_companion.cpp  main_repeater.cpp  main_room_server.cpp
zephcore/tools/formatter/: CMakeLists.txt
